--- a/reference.bib
+++ b/reference.bib
@@ -480,7 +480,7 @@
 	file = {已提交版本:C\:\\Users\\Armeria\\Zotero\\storage\\P9IUWUPP\\Farshchi 等。 - 2019 - Integrating NVIDIA Deep Learning Accelerator (NVDL.pdf:application/pdf},
 }
 
-@misc{nvidia_nvdla_2018,
+@webpage{nvidia_nvdla_2018,
 	title = {{NVDLA}},
 	url = {http://nvdla.org/},
 	abstract = {The NVIDIA Deep Learning Accelerator (NVDLA) is a free and open architecture that promotes a standard way to design deep learning inference accelerators. With its modular architecture, NVDLA is scalable, highly configurable, and designed to simplify integration and portability. The hardware supports a wide range of IoT devices. Delivered as an open source project under the NVIDIA Open NVDLA License, all of the software, hardware, and documentation will be available on GitHub. Contributions are welcome.},
