--- a/body/report_harbin_bachelor_opening.tex
+++ b/body/report_harbin_bachelor_opening.tex
@@ -107,8 +107,8 @@ Venkatesan \textit{et al.}\cite{venkatesan_magnet_2019}
 
 \begin{figure}[htbp]
     \centering
-    \subfigure[Picture a title] {\includegraphics[width=.47\textwidth]{magnet-arch-temp.eps}}
-	\subfigure[Picture b title] {\includegraphics[width=.47\textwidth]{magnet-design-space-explo.eps}}
+    \subfigure[MAGNet 架构模板] {\includegraphics[width=.47\textwidth]{magnet-arch-temp.eps}}
+	\subfigure[MAGNet 应用于 DSE] {\includegraphics[width=.47\textwidth]{magnet-design-space-explo.eps}}
     \caption{MAGNet 架构}
     \label{magnet}
 \end{figure}
